--- a/public/style.css
+++ b/public/style.css
@@ -9,6 +9,14 @@
     z-index: 1;
 }
 
+input, input:before, input:after {
+    -webkit-user-select: initial;
+    -khtml-user-select: initial;
+    -moz-user-select: initial;
+    -ms-user-select: initial;
+    user-select: initial;
+}
+
 ::-webkit-scrollbar {
     width: 0.5vw;
 }
