--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -25,12 +25,12 @@
     background-image: url('/src/images/weather_app_icon.png');
     background-repeat: no-repeat;
     background-size: contain;
-    height: 100px;
-    width: 100px;
+    height: 75px;
+    width: 75px;
 }
 
 .TitleText{
-    font-size: 50pt;
+    font-size: 35pt;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-weight: lighter;
 }
@@ -79,6 +79,7 @@
 .Icons{
     display: flex;
     gap: 1rem;
+    justify-content: space-around;
     font-size: 20pt;
     margin-right: 2rem;
 }
@@ -99,6 +100,12 @@
 
 .fa-linkedin:hover{
     color: rgb(0, 66, 220);
+}
+
+@media screen and (max-width: 1020px) {
+    .Search{
+        width: 300px;
+    }
 }
 
 @media screen and (max-width:509px) {
@@ -132,21 +139,38 @@
 }
 
 @media screen and (max-width:459px) {
-    .NavItems{
-        padding-bottom: 0px;
+    .Search{
+        top: 10px;
+        right: 20px;
+        width: 260px;
     }
 
-    .Search{
+    .SearchButton{
         position: relative;
-        top: 10px;
         right: 20px;
     }
 
     .Icons{
-        position: relative;
-        bottom: 75px;
         margin-right: 1rem;
         padding-bottom: 0px;
-        justify-content: space-around;
+    }
+}
+
+@media screen and (max-width: 373px) { 
+    .NavItems{
+        padding: 0px;
+        padding-bottom: 10px;
+    }
+
+
+    .Search{
+        margin-right: auto;
+        width: 230px;
+    }
+}
+
+@media screen and (max-width: 343px) {
+    .Icons{
+        top: 7px;
     }
 }
