--- a/src/App.css
+++ b/src/App.css
@@ -5,8 +5,31 @@
 }
 
 .main{
-    min-height: 100vh;
-    background-image: url('./images/clouds.gif');
+    min-height: 87.3vh;
+    /*background-image: url('./images/clouds.gif');
     background-size: cover;
-    background-repeat: no-repeat;
+    background-repeat: no-repeat;*/
+    animation: background-colors 10s linear infinite;
+}
+
+@keyframes background-colors {
+    0% {
+        background-color: rgba(85, 30, 225, 0.6);
+    }
+
+    25% {
+        background-color: rgb(75, 20, 215, 0.6);
+    }
+
+    50% {
+        background-color: rgb(145, 60, 208, 0.6);
+    }
+
+    75% {
+        background-color: rgb(75, 20, 215, 0.6);
+    }
+
+    100%{
+        background-color: rgb(36, 20, 215, 0.6);
+    }
 }
