--- a/src/components/Display/Display.css
+++ b/src/components/Display/Display.css
@@ -1,20 +1,24 @@
 .container{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    margin-top: 10vh;
-    margin-bottom: 10vh;
+    display: inline-block;
     margin-left: 10vw;
     margin-right: 10vw;
+    align-self: center;
+    text-align: center;
     width: 100vw;
     height: 65vh;
+    overflow-y: scroll;
     background-color: rgba(195, 223, 224, 0.7);
 }
 
-.container > h3{
-    margin-top: 10px;
+.container::-webkit-scrollbar {
+    display: none;
+}
+
+.container > *{
+    max-height: 100%;
 }
 
 .container > p{
-
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
