--- a/client/src/components/Display/Display.css
+++ b/client/src/components/Display/Display.css
@@ -18,7 +18,7 @@
     max-height: 100%;
 }
 
-.container > p{
-    margin-top: 20px;
-    margin-bottom: 20px;
+.container > div{
+    margin-top: 1rem;
+    margin-bottom: 1rem;
 }
