--- a/client/src/components/Display/Display.css
+++ b/client/src/components/Display/Display.css
@@ -2,8 +2,6 @@
     display: inline-block;
     margin-left: 10vw;
     margin-right: 10vw;
-    align-self: center;
-    text-align: center;
     width: 100vw;
     height: 65vh;
     overflow-y: scroll;
@@ -16,9 +14,32 @@
 
 .container > *{
     max-height: 100%;
+    text-align: center;
+}
+
+.container > img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .container > div{
     margin-top: 1rem;
     margin-bottom: 1rem;
+}
+
+.container > button{
+    display: block;
+    cursor: pointer;
+    background-color: limegreen;
+    color: white;
+    border: none;
+    border-radius: 15px;
+    padding: 5px 5px 5px 5px;
+    margin-left: auto;
+    margin-right: 10px;
+}
+
+.container > button:hover{
+    background-color: rgb(35, 160, 35);
 }
