--- a/client/public/style.css
+++ b/client/public/style.css
@@ -101,7 +101,7 @@ body::before{
     margin-bottom: 1%;
 }
 
-.container {
+.main-container {
     display: flex;
     margin: auto;
     padding-bottom: 20px;
