Display weekly weather forecast
Currently only displays weekly highs/lows in degrees Celsius

--- a/client/src/components/Display/Display.scss
+++ b/client/src/components/Display/Display.scss
@@ -23,7 +23,7 @@
         font-weight: lighter;
     }
 
-    #description{
+    .description{
         display: flex;
         justify-content: center;
         color: gray;
@@ -78,6 +78,18 @@
     > #bottom-layer{
         margin-bottom: 1rem;
     }
+
+    #weekly_forecast{
+        &::before{
+            content: '';
+            border-top: 3px solid gray;
+        }
+
+        flex-wrap: wrap;
+        gap: 1em;
+        justify-content: space-around;
+        align-items: center;
+    }
 }
 
 .weather-container{
@@ -96,10 +108,25 @@
 
     &-mini{
         display: block;
-        width: fit-content;
+        width: 240px;
+        height: 332px;
         border: solid;
         border-radius: 15px;
         margin: 0 auto 0 auto;
+        overflow-y: scroll;
+
+        .day{
+            color: black;
+            background-color: #6571729b;
+        }
+
+        .description{
+            padding: 0 0 0 0;
+        }
+
+        &::-webkit-scrollbar{
+            display: none;
+        }
     }
 }
 
@@ -113,7 +140,7 @@
             font-size: 18pt;
         }
 
-        #description{
+        .description{
             font-size: 16pt;
         }
 
@@ -151,7 +178,7 @@
             font-size: 22pt;
         }
 
-        #description{
+        .description{
             font-size: 18pt;
         }
 
