Display upcoming weekdays in forecast

--- a/client/src/components/Display/Display.scss
+++ b/client/src/components/Display/Display.scss
@@ -104,7 +104,7 @@
     &-mini{
         display: block;
         width: 240px;
-        height: 332px;
+        height: fit-content;
         border: solid;
         border-radius: 15px;
         margin: 0 auto 0 auto;
